# bevy_flair

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: ci.yaml
assets/: animations.css  buttons.css  buttons_cursor.css  custom_parsing.css  custom_time.css  dynamic.css  game_menu.css  gradients.css  grid.css  sound_effects.css  text.css
benches/: animations.css  basic.css  flair_benches.rs  transitions.css  tree.css
crates/bevy_flair_core/: Cargo.toml
crates/bevy_flair_core/src/: bloom_filter.rs  component_properties.rs  component_property.rs  components.rs  entity_command_queue.rs  impls.rs  lib.rs  maybe_type_path.rs  properties_map.rs  property_map.rs  property_path.rs  property_value.rs  reflect_value.rs  registry.rs  static_type_info.rs  sub_properties.rs
crates/bevy_flair_core/src/components/: hover_cursor_icon.rs
crates/bevy_flair_core/src/helper_components/: mod.rs  text.rs
crates/bevy_flair_core_macros/: Cargo.toml
crates/bevy_flair_core_macros/src/: component_properties.rs  extract_properties.rs  lib.rs  utils.rs
crates/bevy_flair_core_macros/tests/: tests.rs
crates/bevy_flair_css_parser/: Cargo.toml
crates/bevy_flair_css_parser/src/: calc.rs  error.rs  error_codes.rs  imports_parser.rs  inline_styles.rs  internal_loader.rs  lib.rs  loader.rs  parser.rs  reflect.rs  shorthand.rs  utils.rs  vars.rs
crates/bevy_flair_css_parser/src/parser/: animations.rs  font_face.rs  keyframes.rs  media_selectors.rs
crates/bevy_flair_css_parser/src/reflect/: assets.rs  color.rs  enums.rs  font.rs  gradient.rs  grid.rs  image.rs  text.rs  ui.rs
crates/bevy_flair_style/: Cargo.toml
crates/bevy_flair_style/src/: asset_loader.rs  builder.rs  components.rs  custom_iterators.rs  layers.rs  lib.rs  media_selector.rs  placeholder.rs  simple_selector.rs  style_block.rs  style_sheet.rs  systems.rs  testing.rs  to_css.rs  vars.rs
crates/bevy_flair_style/src/animations/: animation.rs  curves.rs  easing.rs  keyframes.rs  mod.rs  properties.rs  reflect.rs  transition.rs
crates/bevy_flair_style/src/components/: marker.rs  properties.rs
crates/bevy_flair_style/src/css_selector/: element.rs  error.rs  mod.rs  testing.rs
crates/bevy_flair_style/src/snapshots/: bevy_flair_style__tests__append_child_after_initial_spawn.snap  bevy_flair_style__tests__append_grand_children_after_initial_spawn.snap  bevy_flair_style__tests__custom_button.snap  bevy_flair_style__tests__custom_type_name.snap  bevy_flair_style__tests__spawn_many_children.snap  bevy_flair_style__tests__spawn_many_children_and_grandchildren.snap  bevy_flair_style__tests__spawn_with_pseudo_elements.snap
crates/bevy_flair_style/src/systems/: apply_computed_values.rs  calculate_styles.rs  resolve_property_values.rs
examples/: animations.rs  buttons.rs  buttons_cursor.rs  custom_parsing.rs  custom_time.rs  dynamic.rs  game_menu.rs  gradients.rs  grid.rs  sound_effects.rs  text.rs
src/: lib.rs
tests/: all_properties.rs  css_tests.rs  hierarchy.rs  imports.rs  inline_loader.rs  inline_styles.rs  layers.rs  media_queries.rs  selectors.rs  tests.css
tests/common/: mod.rs
tests/css/: _import_1.css  _import_2.css  _imported_layers.css  all_properties.css  common_selectors.css  hierarchy1.css  hierarchy2.css  imports.css  inline_styles.css  layers.css  media_queries.css  selectors.css
tests/test_app/: mod.rs
tests/unique_name/: mod.rs
utils/properties/: Cargo.toml
utils/properties/src/: main.rs
