[package]
name = "bevy_flair"
version = "0.8.0"
edition = "2024"
description = "Bevy UI styling using CSS"
license = "MIT OR Apache-2.0"
categories = ["games", "game-development"]
keywords = ["style", "animations", "bevy", "css"]
repository = "https://github.com/eckz/bevy_flair"
rust-version = "1.95.0"

[lib]
bench = false

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
bevy_app = { version = "0.19.0-rc.2" }
bevy_asset = { version = "0.19.0-rc.2" }
bevy_camera = { version = "0.19.0-rc.2" }
bevy_color = { version = "0.19.0-rc.2" }
bevy_ecs = { version = "0.19.0-rc.2" }
bevy_image = {  version = "0.19.0-rc.2" }
bevy_input_focus = {  version = "0.19.0-rc.2" }
bevy_math = { version = "0.19.0-rc.2" }
bevy_picking = { version = "0.19.0-rc.2" }
bevy_reflect = { version = "0.19.0-rc.2" }
bevy_text = { version = "0.19.0-rc.2" }
bevy_time = { version = "0.19.0-rc.2" }
bevy_ui = { version = "0.19.0-rc.2", features = ["bevy_picking"] }
bevy_utils = { version = "0.19.0-rc.2" }
bevy_window = { version = "0.19.0-rc.2" }

bevy_flair_core = { path = "crates/bevy_flair_core", version = "0.8.0" }
bevy_flair_core_macros = { path = "crates/bevy_flair_core_macros", version = "0.8.0" }
bevy_flair_style = { path = "crates/bevy_flair_style", version = "0.8.0" }
bevy_flair_css_parser = { path = "crates/bevy_flair_css_parser", version = "0.8.0" }

cssparser = { version = "0.37" }
cssparser-color = { version = "0.5" }
selectors = { version = "0.38" }

[dependencies]
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }

bevy_flair_core = { workspace = true }
bevy_flair_style = { workspace = true }
bevy_flair_css_parser = { workspace = true }

[features]
default = []
ghost_nodes = ["bevy_flair_style/ghost_nodes"]
detailed_trace = ["bevy_flair_style/detailed_trace"]

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = [ "plotters", "cargo_bench_support", "html_reports" ] }
async-channel = { version = "2.5" }
bevy = {version = "0.19.0-rc.2", default-features = false, features = [
    "ui",
    "audio",
    "bevy_dev_tools",
    "track_location",
] }
cssparser = { version = "0.37" }

[[bench]]
name = "flair_benches"
harness = false

[profile.bench]
debug = true

[profile.dev]
debug = "limited"

[profile.dev.package.bevy_flair_style]
opt-level = 1

[profile.test.package.bevy_flair_style]
opt-level = 0

[profile.dev.package.bevy_ui]
opt-level = 1
