[package]
name = "bevy_flair_core"
version = "0.6.0"
edition = "2024"
description = "Bevy UI styling using CSS"
license = "MIT OR Apache-2.0"
categories = ["games", "game-development"]
keywords = ["style", "animations", "bevy", "css"]
repository = "https://github.com/eckz/bevy_flair"
rust-version = "1.88.0"

[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"

[lints.clippy]
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"

[dependencies]
thiserror = "2.0"
serde = "1.0"
tracing = "0.1"
rustc-hash = "2.1"

bevy_app = { workspace = true }
bevy_color = { workspace = true }
bevy_ecs = { workspace = true }
bevy_reflect = { workspace = true }

# These are required to define bevy_ui properties
bevy_asset = { workspace = true }
bevy_image = { workspace = true }
bevy_math = { workspace = true }
bevy_text = { workspace = true }
bevy_ui = { workspace = true }

[dev-dependencies]
bevy_math = { workspace = true }