[package]
name = "bevy_flair_css_parser"
version = "0.4.1"
edition = "2024"
description = "Bevy UI styling using CSS"
license = "MIT OR Apache-2.0"
categories = ["games", "game-development"]
keywords = ["style", "animations", "bevy", "css"]
repository = "https://github.com/eckz/bevy_flair"
rust-version = "1.85.0"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
derive_more = { version = "2.0", features = ["debug", "deref"] }
smallvec = "1.13"
smol_str = "0.2"
rustc-hash = "2.1"
linked-hash-map = "0.5"
tracing = "0.1"
variadics_please = "1.1"

bevy_app = { workspace = true }
bevy_asset = { workspace = true }
bevy_color = { workspace = true }
bevy_ecs = { workspace = true }
bevy_image = { workspace = true }
bevy_math = { workspace = true }
bevy_reflect = { workspace = true }
bevy_text = { workspace = true }
bevy_ui = { workspace = true }

bevy_flair_core = { workspace = true }
bevy_flair_style = { workspace = true }

cssparser = { workspace = true }
cssparser-color = { workspace = true }
selectors = { workspace = true }

ariadne = "0.5"

[dev-dependencies]
indoc = "2.0"
approx = "0.5"
