[package]
name = "bevy_flair_style"
version = "0.1.0"
edition = "2021"
description = "Bevy UI styling using CSS"
license = "MIT OR Apache-2.0"
categories = ["games", "game-development"]
keywords = ["style", "animations", "bevy", "css"]
repository = "https://github.com/eckz/bevy_flair"
rust-version = "1.80.0"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
type_complexity = "allow"

[dependencies]
thiserror = "2.0"
serde = "1.0"
bitflags = "2.8"
rustc-hash = "2.1"
itertools = "0.14"
smol_str = "0.2"

bevy = { workspace = true, features = [
    "bevy_log",
    "bevy_image",
    "bevy_input_focus"
] }
tracing = "0.1"
bevy_flair_core = { workspace = true }

cssparser = { version = "0.34", optional = true }
selectors = { version = "0.26", optional = true }
precomputed-hash = { version = "0.1", optional = true }

[features]
default = ["css_selectors"]
css_selectors = [
    "dep:selectors",
    "dep:cssparser",
    "dep:precomputed-hash"
]

[dev-dependencies]
bevy = { workspace = true, features = [
    "bevy_scene"
] }
ego-tree = "0.10"
insta = { version = "1.42", features = ["ron"] }
