[package]
name = "bevy_flair_style"
version = "0.2.0"
edition = "2024"
description = "Bevy UI styling using CSS"
license = "MIT OR Apache-2.0"
categories = ["games", "game-development"]
keywords = ["style", "animations", "bevy", "css"]
repository = "https://github.com/eckz/bevy_flair"
rust-version = "1.85.0"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
type_complexity = "allow"

[dependencies]
thiserror = "2.0"
serde = "1.0"
derive_more = { version = "2.0", features = ["debug"] }
bitflags = "2.8"
rustc-hash = "2.1"
itertools = "0.14"
smol_str = "0.2"
smallvec = "1.14"

bevy = { workspace = true, features = [
    "bevy_image",
    "bevy_input_focus",
    "bevy_window"
] }
tracing = "0.1"
bevy_flair_core = { workspace = true }

cssparser = { version = "0.35", optional = true }
selectors = { version = "0.28", optional = true }
precomputed-hash = { version = "0.1", optional = true }

[features]
default = ["css_selectors"]
css_selectors = [
    "dep:selectors",
    "dep:cssparser",
    "dep:precomputed-hash"
]

[dev-dependencies]
bevy = { workspace = true, features = [
    "bevy_scene",
] }
ego-tree = "0.10"
insta = { version = "1.42", features = ["ron"] }
