[package]
name = "bevy_flair_style"
version = "0.2.0"
edition = "2024"
description = "Bevy UI styling using CSS"
license = "MIT OR Apache-2.0"
categories = ["games", "game-development"]
keywords = ["style", "animations", "bevy", "css"]
repository = "https://github.com/eckz/bevy_flair"
rust-version = "1.85.0"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
type_complexity = "allow"

[dependencies]
thiserror = "2.0"
serde = "1.0"
derive_more = { version = "2.0", features = ["debug", "deref", "deref_mut"] }
bitflags = "2.8"
rustc-hash = "2.1"
itertools = "0.14"
smol_str = "0.2"
smallvec = "1.14"

bevy_app = { workspace = true }
bevy_asset = { workspace = true }
bevy_color = { workspace = true }
bevy_ecs = { workspace = true }
bevy_image = { workspace = true }
bevy_input_focus = { workspace = true }
bevy_math = { workspace = true }
bevy_reflect = { workspace = true }
bevy_render = { workspace = true }
bevy_text = { workspace = true }
bevy_time = { workspace = true }
bevy_ui = { workspace = true }
bevy_utils = { workspace = true }
bevy_window = { workspace = true }

tracing = "0.1"
bevy_flair_core = { workspace = true }

cssparser = { workspace = true }
selectors = { workspace = true }
precomputed-hash = { version = "0.1" }

[dev-dependencies]
bevy_scene = { workspace = true }
ego-tree = "0.10"
insta = { version = "1.42", features = ["ron"] }
